# Slicer_SliceStat

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SliceStat.s4ext
SliceStat/: CMakeLists.txt  SliceStat.py
SliceStat/Resources/UI/: SliceStat.ui
SliceStat/SliceStat/: SliceStat.py
